sfdx-source/storybank/main/default/objects/Storybank_Approved__c/Storybank_Approved__c.object-meta.xml
<CustomObject>
    <label>Storybank - Approved</label>
    <nameField>
        <label>Approved Submission Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Storybank - Approved</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>