sfdx-source/storybank/main/default/objects/Storybank_Approved__c/fields/Age_Range_formula__c.field-meta.xml
<CustomField>
    <fullName>Age_Range_formula__c</fullName>
    <formula>TEXT( Storyteller__r.Age_Range__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age Range</label>
    <type>Text</type>
</CustomField>