sfdx-source/storybank/main/default/objects/Storybank_Approved__c/fields/Agree_to_Terms_of_Use__c.field-meta.xml
<CustomField>
    <fullName>Agree_to_Terms_of_Use__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agree to Terms of Use</label>
    <type>Checkbox</type>
</CustomField>