sfdx-source/storybank/main/default/objects/Storybank_Approved__c/fields/Attribution__c.field-meta.xml
<CustomField>
    <fullName>Attribution__c</fullName>
    <inlineHelpText>How submitter wants to be known...</inlineHelpText>
    <label>Pseudonym</label>
    <length>100</length>
    <type>Text</type>
</CustomField>