sfdx-source/storybank/main/default/objects/Storybank_Approved__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <inlineHelpText>Category Chosen by Submitter</inlineHelpText>
    <label>Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Child Care</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Housing and Utilities</fullName>
            </value>
            <value>
                <fullName>Jobs/Training</fullName>
            </value>
            <value>
                <fullName>Nutrition Assistance</fullName>
            </value>
            <value>
                <fullName>Tax Credits</fullName>
            </value>
            <value>
                <fullName>Other (Please Specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>