sfdx-source/storybank/main/default/objects/Storybank_Approved__c/fields/Contact_s_City__c.field-meta.xml
<CustomField>
    <fullName>Contact_s_City__c</fullName>
    <formula>Storyteller__r.MailingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact&#39;s City</label>
    <type>Text</type>
</CustomField>