sfdx-source/storybank/main/default/objects/Storybank_Approved__c/fields/Contact_s_State__c.field-meta.xml
<CustomField>
    <fullName>Contact_s_State__c</fullName>
    <formula>Storyteller__r.MailingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact&#39;s State</label>
    <type>Text</type>
</CustomField>