sfdx-source/storybank/main/default/objects/Storybank_Approved__c/fields/Contact_s_Street__c.field-meta.xml
<CustomField>
    <fullName>Contact_s_Street__c</fullName>
    <formula>Storyteller__r.MailingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact&#39;s Street</label>
    <type>Text</type>
</CustomField>