sfdx-source/storybank/main/default/objects/Storybank_Approved__c/fields/Contact_s_Zip__c.field-meta.xml
<CustomField>
    <fullName>Contact_s_Zip__c</fullName>
    <formula>Storyteller__r.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact&#39;s Zip</label>
    <type>Text</type>
</CustomField>