sfdx-source/storybank/main/default/objects/Storybank_Approved__c/fields/Nominating_Organization__c.field-meta.xml
<CustomField>
    <fullName>Nominating_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nominating Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Storybank - Approved</relationshipLabel>
    <relationshipName>Storybank_Approved</relationshipName>
    <type>Lookup</type>
</CustomField>