sfdx-source/storybank/main/default/objects/Storybank_Approved__c/fields/Nominator_Notes__c.field-meta.xml
<CustomField>
    <fullName>Nominator_Notes__c</fullName>
    <label>Nominator Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>