sfdx-source/storybank/main/default/objects/Storybank_Approved__c/fields/Storyteller__c.field-meta.xml
<CustomField>
    <fullName>Storyteller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Storyteller</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Storybank - Approved (Storyteller)</relationshipLabel>
    <relationshipName>Storyteller</relationshipName>
    <type>Lookup</type>
</CustomField>