sfdx-source/storybank/main/default/objects/Storybank_Approved__c/fields/Storyteller_Disability__c.field-meta.xml
<CustomField>
    <fullName>Storyteller_Disability__c</fullName>
    <description>Storyteller&#39;s Disability status based on the Storyteller Contact Lookup field</description>
    <formula>Storyteller__r.Disability__c</formula>
    <label>Storyteller Disability</label>
    <type>Checkbox</type>
</CustomField>