sfdx-source/storybank/main/default/objects/Storybank_Approved__c/fields/Storyteller_Email__c.field-meta.xml
<CustomField>
    <fullName>Storyteller_Email__c</fullName>
    <formula>Storyteller__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Storyteller Email</label>
    <type>Text</type>
</CustomField>