sfdx-source/storybank/main/default/objects/Storybank_Approved__c/fields/Storyteller_Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Storyteller_Ethnicity__c</fullName>
    <description>Storyteller&#39;s Ethnicity based on the Storyteller Contact Lookup field</description>
    <formula>TEXT( Storyteller__r.Ethnicity__c )</formula>
    <label>Storyteller Ethnicity</label>
    <type>Text</type>
</CustomField>