sfdx-source/storybank/main/default/objects/Storybank_Approved__c/fields/Storyteller_Gender__c.field-meta.xml
<CustomField>
    <fullName>Storyteller_Gender__c</fullName>
    <description>Storyteller&#39;s Gender based on the Storyteller Contact Lookup field</description>
    <formula>TEXT( Storyteller__r.Gender__c )</formula>
    <label>Storyteller Gender</label>
    <type>Text</type>
</CustomField>