sfdx-source/storybank/main/default/objects/Storybank_Approved__c/fields/Storyteller_Phone__c.field-meta.xml
<CustomField>
    <fullName>Storyteller_Phone__c</fullName>
    <formula>Storyteller__r.Phone</formula>
    <label>Storyteller Phone</label>
    <type>Text</type>
</CustomField>