sfdx-source/storybank/main/default/objects/Storybank_Approved__c/fields/Storyteller_Sexual_Orientation__c.field-meta.xml
<CustomField>
    <fullName>Storyteller_Sexual_Orientation__c</fullName>
    <description>Storyteller&#39;s Secual Orientation based on the Storyteller Contact Lookup field</description>
    <formula>TEXT( Storyteller__r.Sexual_Orientation__c )</formula>
    <label>Storyteller Sexual Orientation</label>
    <type>Text</type>
</CustomField>