sfdx-source/storybank/main/default/objects/Storybank_Approved__c/fields/Storyteller_Veteran__c.field-meta.xml
<CustomField>
    <fullName>Storyteller_Veteran__c</fullName>
    <description>Storyteller&#39;s Veteran status based on the Storyteller Contact Lookup field</description>
    <formula>Storyteller__r.Veteran__c</formula>
    <label>Storyteller Veteran</label>
    <type>Checkbox</type>
</CustomField>