sfdx-source/storybank/main/default/objects/Storybank_Approved__c/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>Submitted Date</label>
    <type>Date</type>
</CustomField>