sfdx-source/storybank/main/default/objects/Storybank_Approved__c/fields/Submitted_Story__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Story__c</fullName>
    <inlineHelpText>Story submitted from web</inlineHelpText>
    <label>Submitted Story</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>