sfdx-source/storybank/main/default/objects/Storybank_Approved__c/fields/Submitter__c.field-meta.xml
<CustomField>
    <fullName>Submitter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nominator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Storybank - Approved (Nominator)</relationshipLabel>
    <relationshipName>Nominator</relationshipName>
    <type>Lookup</type>
</CustomField>