sfdx-source/storybank/main/default/objects/Storybank_Approved__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <description>Storybank Team&#39;s name to track source of the story. The value should originally be set by a workflow when the public form is submitted. It is copied to the Storybank record via the Field Set.</description>
    <label>Team</label>
    <length>40</length>
    <type>Text</type>
</CustomField>