sfdx-source/storybank/main/default/objects/Storybank_Approved__c/fields/Video__c.field-meta.xml
<CustomField>
    <fullName>Video__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Video</label>
    <type>Checkbox</type>
</CustomField>