sfdx-source/storybank/main/default/objects/Storybank_Approved__c/recordTypes/Video_Submission.recordType-meta.xml
<RecordType>
    <fullName>Video_Submission</fullName>
    <active>true</active>
    <description>For stories submitted with link to Video</description>
    <label>Video Submission</label>
</RecordType>