sfdx-source/storybank/main/default/objects/Storybank_Approved__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Storyteller__c</columns>
    <columns>Submitter__c</columns>
    <columns>Category__c</columns>
    <columns>Posted__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>