sfdx-source/storybank/main/default/objects/Storybank_Approved__c/listViews/Not_Posted_Stories.listView-meta.xml
<ListView>
    <fullName>Not_Posted_Stories</fullName>
    <columns>NAME</columns>
    <columns>Storybank_Name__c</columns>
    <columns>Storyteller__c</columns>
    <columns>Submitter__c</columns>
    <columns>Category__c</columns>
    <columns>Video_URL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Posted__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Not Posted Stories</label>
</ListView>