sfdx-source/storybank/main/default/objects/Storybank_Approved__c/listViews/Posted_Stories_6_Months.listView-meta.xml
<ListView>
    <fullName>Posted_Stories_6_Months</fullName>
    <columns>NAME</columns>
    <columns>Storybank_Name__c</columns>
    <columns>Storyteller__c</columns>
    <columns>Submitter__c</columns>
    <columns>Category__c</columns>
    <columns>Video_URL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Posted__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>lessThan</operation>
        <value>LAST_N_MONTHS:6</value>
    </filters>
    <label>Posted Stories - 6 Months</label>
</ListView>